--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "jest-environment-jsdom": "^29.7.0",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.7.0",
+    "jsdom": "^22.1.0",
     "prettier": "3.0.3"
   }
 }
