--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,5 @@ jobs:
       - run: npm install
       - run: npx prettier . --check
       - run: npx prettier . --write
+      - run: npm run test
       - run: npm run lint
