--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "next": "13.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
