--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,9 @@ jobs:
       - run: npm run lint
 
   deploy-direct:
-    if: github.repository == 'master' && ${{ success() }}
+    
+if: github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'master'
+    needs: [build]
     runs-on: ubuntu-latest
 
     # strategy:
