--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,9 +32,9 @@ jobs:
       - run: npm run lint
 
   deploy-direct:
+    if: github.repository == 'master' && ${{ success() }}
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'master'
-    needs: [build]
+
     # strategy:
     #   matrix:
     #     node-version: [14.x, 16.x, 18.x]
