--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,3 +49,4 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run build
+      - run: npx netlify-cli deploy --site ${{ secrets.NETLIFY_SITE_ID}} --auth ${{secrets.NETLIFY_AUTH_TOKEN}} --prod
